ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libcolloids.la
libcolloids_la_SOURCES = boo_data.cpp fields.cpp particles.cpp dynamicClusters.cpp files_series.cpp periodic.cpp dynamicParticles.cpp index.cpp traj.cpp boo_data.hpp fields.hpp particles.hpp dynamicClusters.hpp files_series.hpp periodic.hpp dynamicParticles.hpp index.hpp traj.hpp RStarTree/RStarBoundingBox.h RStarTree/RStarTree.h RStarTree/RStarVisitor.h
include_HEADERS = boo_data.hpp fields.hpp particles.hpp dynamicClusters.hpp files_series.hpp periodic.hpp dynamicParticles.hpp index.hpp traj.hpp  


